--- a/package.json
+++ b/package.json
@@ -4,18 +4,36 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "./node_modules/webpack/bin/webpack.js",
+    "webpack": "webpack",
+    "webpack:dev": "npm run webpack -- --mode=development --watch",
+    "start:dev": "npm run webpack:dev & DATABASE_URL=postgres://localhost/redux_users nodemon ./server.js --ignore client/ --ignore public/",
     "start:db": "DATABASE_URL=postgres://localhost/redux_users nodemon ./db.js",
     "start:server": "DATABASE_URL=postgres://localhost/redux_users nodemon ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "babel": {
+    "presets": [
+      "react",
+      "stage-2"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "express": "^4.16.4",
     "nodemon": "^1.18.10",
     "path": "^0.12.7",
     "pg": "^7.9.0",
-    "sequelize": "^5.2.6"
+    "sequelize": "^5.2.6",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   }
 }
