--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "nodemon": "^1.18.10",
     "path": "^0.12.7",
     "pg": "^7.9.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "sequelize": "^5.2.6",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
