--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "pg": "^7.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "sequelize": "^5.2.6",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
